--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <title>Home</title>
   </head>
   <body>
@@ -25,4 +24,20 @@
 
 
   </body>
+
+
+<script>
+  $(document).ready(function() {
+    $('.hamburger').click(function() {
+      $('.mobile').addClass('active-m');
+
+    });
+    $('.close').click(function() {
+      $('.mobile').removeClass('active-m');
+
+    });
+  });
+
+
+</script>
 </html>
